# cincv-exp-mob

./: configure.in
cinelerra/: Makefile.am  ffmpeg.C  file.C  fileffmpeg.C  filempeg.C  formattools.C  record.C
debian/: changelog  cinelerra-cv.postinst  cinelerra-cv.postrm  cinelerra.menu  cinelerra.postinst  cinelerra.postrm  control  copyright  libmpeg3cine-dev.install  libmpeg3cine.install  libquicktimecine-dev.install  rules
debian/patches/: change-exec-name-desktop-launcher.diff  fix-menu-category.diff  fix-support-v4l.diff  series
debian/rules.d/: amd64.mk  i386.mk  powerpc.mk
guicast/: bcresources.C  bcwindowbase.C  bcwindowbase.h  stringfile.C
image/: cinelerra.desktop
libmpeg3/: mpeg3tocutil.c
plugins/: Makefile.am
plugins/1080to540/: picon_png.h
plugins/aging/: picon_png.h
plugins/bandwipe/: picon_png.h
plugins/blur/: picon_png.h
plugins/brightness/: picon_png.h
plugins/burn/: picon_png.h
plugins/chromakey/: picon_png.h
plugins/chromakeyhsv/: picon_png.h
plugins/colorbalance/: picon_png.h
plugins/compressor/: picon_png.h
plugins/crossfade/: picon_png.h
plugins/decimate/: picon_png.h
plugins/deinterlace/: picon_png.h
plugins/delayaudio/: picon_png.h
plugins/delayvideo/: picon_png.h
plugins/denoise/: picon_png.h
plugins/denoisefft/: picon_png.h
plugins/denoisemjpeg/: picon_png.h
plugins/denoiseseltempavg/: picon_png.h
plugins/denoisevideo/: picon_png.h
plugins/despike/: picon_png.h
plugins/diffkey/: picon_png.h
plugins/oldsuvtheme/: Makefile.am  oldsuv.C  oldsuv.h
plugins/oldsuvtheme/data/: Makefile.am
(+72 files in other folders)
